# wagtail-contact-reply

./: .gitignore  README.md  pyproject.toml
wagtail_contact_reply/: apps.py  forms.py  views.py  wagtail_hooks.py
wagtail_contact_reply/templates/wagtailforms/: list_submissions.html  reply.html
