[tool.poetry]
name = "wagtail-contact-reply"
version = "0.1.0"
description = "Reply to contact form submissions directly from Wagtail"
authors = ["Kalob Taulien <kalob.taulien@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/KalobTaulien/wagtail-contact-reply"
repository = "https://github.com/KalobTaulien/wagtail-contact-reply"
classifiers=[
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 2.2',
    'Framework :: Wagtail',
    'Framework :: Wagtail :: 2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]
packages = [
    { include = "wagtail_contact_reply" },
]

[tool.poetry.dependencies]
python = ">=3.6,<=3.8"
wagtail = ">=2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
